Custom Record Page/Test/force-app/main/default/objects/Custom_Record_Page__c/Custom_Record_Page__c.object-meta.xml
<CustomObject>
    <description>Stores the layout metadata to manage custom recordpages.</description>
    <label>Custom Record Page</label>
    <nameField>
        <label>Custom Record Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Record Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>