Custom Record Page/Test/force-app/main/default/objects/Custom_Record_Page__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <label>Background Image URL</label>
    <type>Url</type>
</CustomField>