Custom Record Page/Test/force-app/main/default/objects/Custom_Record_Page__c/fields/Displayed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Fields__c</fullName>
    <label>Displayed Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>