Custom Record Page/Test/force-app/main/default/objects/Custom_Record_Page__c/fields/Layout_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Layout_Config_JSON__c</fullName>
    <label>Layout Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>